--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/socialite": "2.0.*@dev",
         "intervention/image": "^2.4",
         "mews/captcha": "^2.1",
-        "anhskohbo/no-captcha": "^3.0"
+        "anhskohbo/no-captcha": "^3.0",
+        "guzzlehttp/guzzle": "~6.3",
+        "symfony/psr-http-message-bridge": "0.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
