--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "mews/captcha": "^2.1",
         "anhskohbo/no-captcha": "^3.0",
         "guzzlehttp/guzzle": "~6.3",
-        "symfony/psr-http-message-bridge": "0.2"
+        "symfony/psr-http-message-bridge": "0.2",
+        "barryvdh/laravel-dompdf": "^0.8.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
